--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>אמא וחצי</title>
+  <link rel="stylesheet" href="/src/assets/styles/main.css">
 </head>
 
 <body>
