fix of images movement to public for deployment

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
 <body>
   <div id="root"></div>
+  <img src="/assets/styles/imgs/logos/logo-pink-circle-shay.png" alt="mom and a half logo">
+  <img src="/assets/styles/imgs/images/Hero-img-8.jpg" alt="Sarit 'Mom and a half' on the couch working and smiling">
+  <img src="/assets/styles/imgs/images/issue-section-img-1.jpg" alt="Sarit 'Mom and a half' reading book with a smile">
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
