fix logo to work in tab

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <link rel="icon" href="./public/logo-pink-nobcg.png">
+  <link rel="icon" href="./images/logo-pink-nobcg.png">
 
   <meta charset="UTF-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
